--- a/bunz.cabal
+++ b/bunz.cabal
@@ -37,6 +37,7 @@ test-suite bunz-test
                      , BeautifierSpec
   build-depends:       base
                      , bunz
+                     , doctest >= 0.11
                      , hspec == 2.4.4
   ghc-options:         -threaded -rtsopts -with-rtsopts=-N
   default-language:    Haskell2010
