--- a/bunz.cabal
+++ b/bunz.cabal
@@ -27,6 +27,7 @@ executable bunz-exe
   ghc-options:         -threaded -rtsopts -with-rtsopts=-N
   build-depends:       base
                      , bunz
+                     , cmdargs >= 0.10.18
   default-language:    Haskell2010
 
 test-suite bunz-test
