--- a/bunz.cabal
+++ b/bunz.cabal
@@ -1,14 +1,14 @@
 name:                bunz
-version:             0.1.0.0
+version:             0.0.1
 -- synopsis:
--- description:
-homepage:            https://github.com/githubuser/bunz#readme
-license:             BSD3
+description:         CLI tool to beautify JSON string
+homepage:            https://github.com/sendyhalim/bunz
+license:             MIT
 license-file:        LICENSE
-author:              Author name here
-maintainer:          example@example.com
-copyright:           2017 Author name here
-category:            Web
+author:              Sendy Halim
+maintainer:          sendyhalim93@gmail.com
+copyright:           2017 Sendy Halim
+category:            CLI
 build-type:          Simple
 extra-source-files:  README.md
 cabal-version:       >=1.10
