--- a/bunz.cabal
+++ b/bunz.cabal
@@ -27,6 +27,7 @@ executable bunz
   ghc-options:         -threaded -rtsopts -with-rtsopts=-N
   build-depends:       base
                      , bunz
+                     , text == 1.2.2.2
                      , unix == 2.7.2.1
                      , cmdargs >= 0.10.18
   default-language:    Haskell2010
