--- a/bunz.cabal
+++ b/bunz.cabal
@@ -42,7 +42,7 @@ test-suite bunz-test
                      , bunz
                      , doctest >= 0.11
                      , hspec == 2.4.4
-  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
+  ghc-options:         -threaded -rtsopts -with-rtsopts=-N -O2
   default-language:    Haskell2010
 
 source-repository head
